--- a/main.css
+++ b/main.css
@@ -4,6 +4,22 @@
 }
 
 .sectionLight {
-    background-color: #eceef;
-    padding: 2em;
+    background-color: #eceeef;
+    padding: 2rem;
+}
+
+.sectionDark {
+    background-color: #cccccc;
+    padding: 2rem;
+}
+
+.coolStuffWrapper {
+    margin-top: 20px;
+}
+
+button.coolStuffBtn {
+    background-color: red;
+    color: #ffffff;
+    display: block;
+    margin: auto;
 }
